--- a/app/src/main/res/layout/ui_intervention_item.xml
+++ b/app/src/main/res/layout/ui_intervention_item.xml
@@ -8,16 +8,18 @@
 
     <TableRow
         android:id="@+id/tableRowListInt"
-        android:background="#b1d9e5"
-        android:layout_marginTop="2dp">
+        android:layout_marginTop="2dp"
+        android:background="@color/common_action_bar_splitter">
 
         <TextView
+            android:id="@+id/ui_intervention_item_libelle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:id="@+id/ui_intervention_item_libelle"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:padding="10dp"
             android:text="Libelle"
-            android:layout_marginBottom="10dp" />
+            android:textSize="15dp" />
     </TableRow>
 
 </TableLayout>
