--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -145,7 +145,7 @@
             android:layout_weight="1"
             android:text="@string/supprimer" />
 
-        <Button
+        <!--<Button
             android:id="@+id/m_menu_Actionpoint_deplacer"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -153,7 +153,7 @@
             android:layout_toEndOf="@+id/button"
             android:layout_toRightOf="@+id/button"
             android:layout_weight="1"
-            android:text="@string/deplacer" />
+            android:text="@string/deplacer" />-->
 
     </LinearLayout>
 
