--- a/app/src/main/res/layout/user_interventions.xml
+++ b/app/src/main/res/layout/user_interventions.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context="istic.fr.droneproject.UserInterventionsActivity">
+    tools:context="istic.fr.droneproject.activities.UserInterventionsActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/ui_list_interventions"
