--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="32dp"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="istic.fr.droneproject.MapActivity">
+    tools:context="istic.fr.droneproject.activities.MapActivity">
 
 
     <LinearLayout
@@ -172,7 +172,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_weight="0"
-            tools:context=".MapActivity" />
+            tools:context=".activities.MapActivity" />
 
     </LinearLayout>
 
