--- a/app/src/main/res/layout/codis_map_fragment.xml
+++ b/app/src/main/res/layout/codis_map_fragment.xml
@@ -31,7 +31,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".CodisMapFragment"
+        tools:context=".fragment.CodisMapFragment"
         android:layout_weight="1" />
 
     <Button
