--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -158,6 +158,45 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/m_menu_Actiondrone"
+        android:layout_width="120dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <Button
+            android:id="@+id/m_menu_Actiondrone_segment"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1"
+            android:text="@string/segment" />
+
+        <Button
+            android:id="@+id/m_menu_Actiondrone_zone"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignTop="@+id/button"
+            android:layout_toEndOf="@+id/button"
+            android:layout_toRightOf="@+id/button"
+            android:layout_weight="1"
+            android:text="@string/zone" />
+
+        <Button
+            android:id="@+id/m_menu_Actiondrone_stop"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignTop="@+id/button"
+            android:layout_toEndOf="@+id/button"
+            android:layout_toRightOf="@+id/button"
+            android:layout_weight="1"
+            android:text="@string/stop" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/m_linearmap"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
