--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -15,21 +15,21 @@
 
     <LinearLayout
         android:id="@+id/m_menu_vehicules"
+        android:layout_width="120dp"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        android:weightSum="1"
         android:orientation="vertical"
-        android:layout_width="120dp">
+        android:visibility="gone"
+        android:weightSum="1">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/m_list_vehicules_add"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:clickable="true"
-            android:src="@drawable/ic_plus"
             android:layout_gravity="bottom|right"
-            android:layout_weight="0" />
+            android:layout_weight="0"
+            android:clickable="true"
+            android:src="@drawable/ic_plus" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/m_list_vehicules"
@@ -40,10 +40,10 @@
 
     <LinearLayout
         android:id="@+id/m_menu_points"
+        android:layout_width="120dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="gone"
-        android:layout_width="120dp">
+        android:visibility="gone">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/m_list_points"
@@ -54,10 +54,10 @@
 
     <LinearLayout
         android:id="@+id/m_menu_choix"
+        android:layout_width="120dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="gone"
-        android:layout_width="120dp">
+        android:visibility="gone">
 
         <Button
             android:id="@+id/m_menu_choix_points"
@@ -82,10 +82,10 @@
 
     <LinearLayout
         android:id="@+id/m_menu_Actionvehicule"
+        android:layout_width="120dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="gone"
-        android:layout_width="120dp">
+        android:visibility="gone">
 
         <Button
             android:id="@+id/m_menu_Actionvehicule_deplacer"
@@ -130,10 +130,10 @@
 
     <LinearLayout
         android:id="@+id/m_menu_Actionpoint"
+        android:layout_width="120dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="gone"
-        android:layout_width="120dp">
+        android:visibility="gone">
 
         <Button
             android:id="@+id/m_menu_Actionpoint_supprimer"
@@ -162,27 +162,37 @@
         android:layout_width="120dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <Button
-            android:id="@+id/m_menu_Actiondrone_segment"
+            android:id="@+id/m_menu_Actiondrone_segment_b"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_weight="1"
-            android:text="@string/segment" />
+            android:text="@string/drone_segment" />
 
         <Button
-            android:id="@+id/m_menu_Actiondrone_zone"
+            android:id="@+id/m_menu_Actiondrone_exclusion"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_alignTop="@+id/button"
             android:layout_toEndOf="@+id/button"
             android:layout_toRightOf="@+id/button"
             android:layout_weight="1"
-            android:text="@string/zone" />
+            android:text="@string/drone_exclusion" />
+
+        <Button
+            android:id="@+id/m_menu_Actiondrone_zone_b"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignTop="@+id/button"
+            android:layout_toEndOf="@+id/button"
+            android:layout_toRightOf="@+id/button"
+            android:layout_weight="1"
+            android:text="@string/drone_zone" />
 
         <Button
             android:id="@+id/m_menu_Actiondrone_stop"
@@ -192,7 +202,105 @@
             android:layout_toEndOf="@+id/button"
             android:layout_toRightOf="@+id/button"
             android:layout_weight="1"
-            android:text="@string/stop" />
+            android:text="@string/drone_stop" />
+
+        <Button
+            android:id="@+id/m_menu_Actiondrone_parking"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignTop="@+id/button"
+            android:layout_toEndOf="@+id/button"
+            android:layout_toRightOf="@+id/button"
+            android:layout_weight="1"
+            android:text="@string/drone_parking" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/m_menu_Actiondrone_segment"
+        android:layout_width="120dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="visible">
+
+        <Button
+            android:id="@+id/m_menu_Actiondrone_segment_supplast"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1"
+            android:text="@string/drone_supplast" />
+
+        <Button
+            android:id="@+id/m_menu_Actiondrone_segment_boucle"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignTop="@+id/button"
+            android:layout_toEndOf="@+id/button"
+            android:layout_toRightOf="@+id/button"
+            android:layout_weight="1"
+            android:text="@string/drone_boucle" />
+
+        <Button
+            android:id="@+id/m_menu_Actiondrone_segment_fin"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1"
+            android:text="@string/drone_fin" />
+
+        <Button
+            android:id="@+id/m_menu_Actiondrone_segment_annule"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1"
+            android:text="@string/drone_annule" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/m_menu_Actiondrone_zone"
+        android:layout_width="120dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="visible">
+
+        <Button
+            android:id="@+id/m_menu_Actiondrone_zone_supplast"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1"
+            android:text="@string/drone_supplast" />
+
+        <Button
+            android:id="@+id/m_menu_Actiondrone_zone_fin"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1"
+            android:text="@string/drone_fin" />
+
+        <Button
+            android:id="@+id/m_menu_Actiondrone_zone_annule"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1"
+            android:text="@string/drone_annule" />
 
     </LinearLayout>
 
