--- a/app/src/main/res/layout/album_photo_item.xml
+++ b/app/src/main/res/layout/album_photo_item.xml
@@ -18,4 +18,13 @@
         android:layout_height="match_parent"
         app:srcCompat="@android:color/transparent"
         android:id="@+id/album_photo_imageview" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/album_photo_datephoto"
+        android:textSize="20sp"
+        android:textColor="@android:color/black"
+        android:gravity="center_horizontal" />
+
 </LinearLayout>
