--- a/app/src/main/res/layout/album_photo_item.xml
+++ b/app/src/main/res/layout/album_photo_item.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/album_photo_nomphoto"
         android:textSize="24sp"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:gravity="center_horizontal" />
 
     <ImageView
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/album_photo_datephoto"
         android:textSize="20sp"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:gravity="center_horizontal" />
 
 </LinearLayout>
