--- a/app/src/main/res/layout/album_photo_item.xml
+++ b/app/src/main/res/layout/album_photo_item.xml
@@ -14,8 +14,8 @@
         android:gravity="center_horizontal" />
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:srcCompat="@android:color/transparent"
         android:id="@+id/album_photo_imageview" />
 
