--- a/app/src/main/res/layout/videos_fragment.xml
+++ b/app/src/main/res/layout/videos_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/video_videoview"
         android:layout_width="match_parent"
-        android:layout_height="393dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
         android:layout_marginTop="40dp"
         android:layout_centerHorizontal="true"
@@ -17,27 +17,34 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:weightSum="1">
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Start"
-            android:id="@+id/button_start"
-            android:layout_weight="0.12" />
 
         <Button
-            style="?android:attr/buttonStyleSmall"
+            android:id="@+id/button_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pause"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="16dp"
+            android:layout_marginRight="5dp"
+            android:background="@color/fbutton_color_green_sea"
+            android:text="Start"
+            android:textColor="@color/white" />
+        <Button
             android:id="@+id/button_pause"
-            android:layout_weight="0.16" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="5dp"
+            android:background="@color/fbutton_color_green_sea"
+            android:text="Pause"
+            android:textColor="@color/white" />
 
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
