--- a/app/src/main/res/layout/ui_vehicule_item.xml
+++ b/app/src/main/res/layout/ui_vehicule_item.xml
@@ -4,17 +4,34 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/ui_vehicule_item_nom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Nom" />
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
-    <TextView
-        android:id="@+id/ui_vehicule_item_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Type" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/ui_vehicule_item_nom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="Nom"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/ui_vehicule_item_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Type"
+                android:textSize="18sp"
+                android:gravity="end" />
+        </TableRow>
+
+    </TableLayout>
+
 </LinearLayout>
