--- a/app/src/main/res/layout/user_interventions.xml
+++ b/app/src/main/res/layout/user_interventions.xml
@@ -154,14 +154,16 @@
                 android:layout_marginLeft="20sp"
                 android:text="Moyens"
                 android:textColor="@color/fbutton_color_green_sea"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:layout_rowWeight="0" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/ui_list_vehicules"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="272dp"
                 android:layout_marginLeft="20sp"
-                android:layout_marginTop="10sp" />
+                android:layout_marginTop="10sp"
+                android:layout_height="0dp"
+                android:layout_gravity="fill_vertical" />
 
 
         </GridLayout>
