--- a/app/src/main/res/layout/ui_intervention_item.xml
+++ b/app/src/main/res/layout/ui_intervention_item.xml
@@ -7,9 +7,9 @@
     <!--android:layout_marginBottom="10dp"-->
 
     <TableRow
-        android:id="@+id/tableRowListInt"
+        android:id="@+id/ui_intervention_item"
         android:layout_marginTop="2dp"
-        android:background="@color/common_action_bar_splitter">
+        android:background="@color/iron">
 
         <TextView
             android:id="@+id/ui_intervention_item_libelle"
@@ -18,6 +18,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
             android:padding="10dp"
+            android:textColor="@color/black"
             android:text="Libelle"
             android:textSize="15dp" />
     </TableRow>
