debug clignotement vidéo + layout vidéo

--- a/app/src/main/res/layout/videos_fragment.xml
+++ b/app/src/main/res/layout/videos_fragment.xml
@@ -8,9 +8,7 @@
     <ImageView
         android:id="@+id/video_videoview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:layout_marginTop="40dp"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         app:srcCompat="@android:color/transparent" />
