--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,4 +39,5 @@
     <color name="fbutton_color_asbestos">#7f8c8d</color>
 
     <color name="TransparentBlue">#a82196f3</color>
+    <color name="TransparentRed">#abc0392b</color>
 </resources>
