--- a/app/src/main/res/layout/album_photo_item.xml
+++ b/app/src/main/res/layout/album_photo_item.xml
@@ -8,23 +8,15 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/album_photo_nomphoto"
-        android:textSize="24sp"
-        android:textColor="@android:color/white"
-        android:gravity="center_horizontal" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:color/transparent"
-        android:id="@+id/album_photo_imageview" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/album_photo_datephoto"
         android:textSize="20sp"
         android:textColor="@android:color/white"
         android:gravity="center_horizontal" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        app:srcCompat="@android:color/transparent"
+        android:id="@+id/album_photo_imageview" />
 
 </LinearLayout>
