fix floatingButton maps

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -11,7 +11,8 @@
     android:paddingLeft="32dp"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="istic.fr.droneproject.activities.MapActivity">
+    tools:context="istic.fr.droneproject.activities.MapActivity"
+    android:weightSum="1">
 
 
     <LinearLayout
@@ -305,46 +306,79 @@
 
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/m_linearmap"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <fragment
-            android:id="@+id/m_map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
+        <FrameLayout
+            android:id="@+id/m_linearmap"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_weight="0"
-            tools:context=".activities.MapActivity" />
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/m_map_reloaddrone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|right"
-            android:layout_margin="16dp"
-            app:elevation="4dp"
-            app:layout_anchorGravity="bottom|right|end"
-            android:clickable="true"
-            android:src="@drawable/drone" />
+            <fragment
+                android:id="@+id/m_map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="0"
+                tools:context=".activities.MapActivity" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/m_map_filtre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|right|fill_horizontal"
-            android:layout_margin="16dp"
-            android:clickable="true"
-            android:src="@android:drawable/ic_menu_manage"
-            app:elevation="24dp"
-            app:layout_anchorGravity="bottom|right|end" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_gravity="top|right"
+                android:orientation="vertical">
 
-    </FrameLayout>
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/m_map_reloaddrone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:clickable="true"
+                    android:src="@drawable/drone"
+                    app:elevation="4dp" />
+
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/m_map_filtre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginTop="16dp"
+                    android:clickable="true"
+                    android:src="@android:drawable/ic_menu_manage" />
+            </LinearLayout>
+
+        </FrameLayout>
+
+        <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/m_map_reloaddrone"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="top|right"-->
+        <!--android:layout_margin="16dp"-->
+        <!--app:elevation="4dp"-->
+        <!--app:layout_anchorGravity="bottom|right|end"-->
+        <!--android:clickable="true"-->
+        <!--android:src="@drawable/drone" />-->
+
+        <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/m_map_filtre"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="top|right|fill_horizontal"-->
+        <!--android:layout_margin="16dp"-->
+        <!--android:clickable="true"-->
+        <!--android:src="@android:drawable/ic_menu_manage"-->
+        <!--app:elevation="24dp"-->
+        <!--app:layout_anchorGravity="bottom|right|end" />-->
+    </RelativeLayout>
 
 
 </LinearLayout>
